--- a/fame-server/src/main/resources/application-dev.yml
+++ b/fame-server/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/fame?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password: root
+    password: MYSQLPASSWD@1234!
     schema: classpath:db/mysql/schema/*.sql
     # 第三方连接池需要设置为 always
     initialization-mode: always
