--- a/fame-server/src/main/resources/application-dev.yml
+++ b/fame-server/src/main/resources/application-dev.yml
@@ -3,12 +3,16 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/fame?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/fame?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: MYSQLPASSWD@1234!
-    schema: classpath:db/mysql/schema/*.sql
-    # 第三方连接池需要设置为 always
-    initialization-mode: always
+  #    schema: classpath:db/mysql/schema/*.sql
+  #    第三方连接池需要设置为 always
+  #    initialization-mode: always
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 #log
 logging:
@@ -16,3 +20,6 @@ logging:
     root: INFO
     com:
       zbw: DEBUG
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
