--- a/fame-server/src/main/resources/application-dev.yml
+++ b/fame-server/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
   #    initialization-mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+          ddl-auto: create
     show-sql: true
 
 #log
