--- a/fame-server/src/main/resources/application-dev.yml
+++ b/fame-server/src/main/resources/application-dev.yml
@@ -1,19 +1,25 @@
+#datasource
 spring:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://fame-mysql:3306/fame?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+    username: root
+    password: MYSQLPASSWD@1234!
+  #    schema: classpath:db/mysql/schema/*.sql
+  #    第三方连接池需要设置为 always
+  #    initialization-mode: always
   jpa:
     hibernate:
-      #create：每次创建先drop原有的表，然后重新创建
-      ddl-auto: create
+          ddl-auto: update
     show-sql: true
-  #使用本地mysql数据库用于，本地调试
-  datasource:
-    url: jdbc:mysql://localhost:3306/fame?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 
-mybatis-plus:
-  configuration:
-    #打印mybatis-plus的sql
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+#log
 logging:
   level:
+    root: INFO
     com:
       zbw: DEBUG
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
