debug：resource路径问题，使用getResource获得

--- a/fame-server/pom.xml
+++ b/fame-server/pom.xml
@@ -160,6 +160,17 @@
 
 
     <build>
+
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </testResource>
+        </testResources>
+
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
